# task_manipulator

./: docker-compose.yml  pyproject.toml  todo
environments/: db.env  rabbitmq.env
nginx/: nginx.conf
src/entities/: task.py
src/frameworks_and_drivers/cache_implementations/redis/: connection.py  task_status.py
src/frameworks_and_drivers/gateways/: llm_gateway.py
src/frameworks_and_drivers/http_web_fastapi/: depends.py  exception_handlers.py  main.py
src/frameworks_and_drivers/queue_implementations/: connection.py  consumer.py  main.py  rabbit_mq_queue.py  settings.py  topology.py
src/frameworks_and_drivers/queue_implementations/consumer/: consumer.py  depends.py
src/frameworks_and_drivers/queue_implementations/publisher/: publisher.py
src/frameworks_and_drivers/repositories_implementations/aync_sqlalchemy/: alembic.ini  database.py  models.py  settings.py  task.py
src/interface_adapters/controllers/: task.py
src/interface_adapters/controllers/controllers_logic/: controllers.py
src/interface_adapters/dtos/: task.py  usecases.py
src/interface_adapters/gateways/: llm_gateway.py
src/interface_adapters/queue_interfaces/: queue.py
src/interface_adapters/repositories_interfaces/: task.py
src/usecases/: base.py  task.py
src/usecases/usecases_api/: task.py
src/usecases/usecases_logic/: task.py
tests/: conftest.py
tests/api/: test_tasks_api.py
tests/fakes/: cache.py  llm.py  queue.py  repository.py
tests/integration/: conftest.py  test_create_task_flow.py  test_task_repository.py
tests/unit/: test_usecases_api.py  test_usecases_logic.py
(+5 files in other folders)
