[project]
name = "venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pre-commit>=4.6.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
